update pyenchant version

--- a/spellchecker/spellchecker v1.ipynb
+++ b/spellchecker/spellchecker v1.ipynb
@@ -49,8 +49,8 @@
    },
    "outputs": [],
    "source": [
-    "d1=datrie.Trie.load('/media/sf_communalflat/ihatelinguistics/hyphen_ext.trie')\n",
-    "d2=datrie.Trie.load('/media/sf_communalflat/ihatelinguistics/wrong_hyphen.trie')\n",
+    "d1=datrie.Trie.load('hyphen_ext.trie')\n",
+    "d2=datrie.Trie.load('wrong_hyphen.trie')\n",
     "\n",
     "def lookup(tokens):\n",
     "    s = []\n",
@@ -191,7 +191,7 @@
    },
    "outputs": [],
    "source": [
-    "test=open('/media/sf_communalflat/ihatelinguistics/spell_test.txt').readlines()"
+    "test=open('spell_test.txt').readlines()"
    ]
   },
   {
