--- a/spellchecker/spellchecker v1.ipynb
+++ b/spellchecker/spellchecker v1.ipynb
@@ -117,6 +117,24 @@
     "            s2 = s2.replace(i, '')\n",
     "            v+=1\n",
     "    return v"
+    
+    "def levenshtein(s, t):\n",
+    "        if s == t: return 0\n",
+    "        elif len(s) == 0: return len(t)\n",
+    "        elif len(t) == 0: return len(s)\n",
+    "        v0 = [None] * (len(t) + 1)\n",
+    "        v1 = [None] * (len(t) + 1)\n",
+    "        for i in range(len(v0)):\n",
+    "            v0[i] = i\n",
+    "        for i in range(len(s)):\n",
+    "            v1[0] = i + 1\n",
+    "            for j in range(len(t)):\n",
+    "                cost = 0 if s[i] == t[j] else 1\n",
+    "                v1[j + 1] = min(v1[j] + 1, v0[j + 1] + 1, v0[j] + cost)\n",
+    "            for j in range(len(v0)):\n",
+    "                v0[j] = v1[j]\n",
+    "                \n",
+    "        return v1[len(t)]"
    ]
   },
   {
