draft with second formula (compare2) + word model

--- a/spellchecker/spellchecker - more drafts.ipynb
+++ b/spellchecker/spellchecker - more drafts.ipynb
@@ -30,7 +30,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "rusdict=datrie.Trie.load('C:\\\\Users\\\\Forpython\\\\Desktop\\\\communalflat\\\\ihatelinguistics\\\\russian_dic.trie')"
+      "rusdict=datrie.Trie.load('russian_dic.trie')"
      ],
      "language": "python",
      "metadata": {},
@@ -52,8 +52,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "d1=datrie.Trie.load('C:\\\\Users\\\\Forpython\\\\Desktop\\\\communalflat\\\\ihatelinguistics\\\\hyphen_ext.trie')\n",
-      "d2=datrie.Trie.load('C:\\\\Users\\\\Forpython\\\\Desktop\\\\communalflat\\\\ihatelinguistics\\\\wrong_hyphen.trie')\n",
+      "d1=datrie.Trie.load('hyphen_ext.trie')\n",
+      "d2=datrie.Trie.load('wrong_hyphen.trie')\n",
       "\n",
       "def lookup(tokens):\n",
       "    s = []\n",
@@ -257,8 +257,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "probdict = datrie.Trie.load('C:\\\\Users\\\\Forpython\\\\Desktop\\\\communalflat\\\\ihatelinguistics\\\\lmodel.trie')\n",
-      "char_probdict=datrie.Trie.load('C:\\\\Users\\\\Forpython\\\\Desktop\\\\communalflat\\\\ihatelinguistics\\\\lmodel_chars.trie')"
+      "probdict = datrie.Trie.load('lmodel.trie')\n",
+      "char_probdict=datrie.Trie.load('lmodel_chars.trie')"
      ],
      "language": "python",
      "metadata": {},
@@ -346,7 +346,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "test=open('C:\\\\Users\\\\Forpython\\\\Desktop\\\\communalflat\\\\ihatelinguistics\\\\spell_test.txt', encoding='utf-8').readlines()"
+      "test=open('spell_test.txt', encoding='utf-8').readlines()"
      ],
      "language": "python",
      "metadata": {},
